--- a/style.css
+++ b/style.css
@@ -562,3 +562,178 @@ body {
 }
 
 /* take section ends here */
+
+/* transform section starts from here  */
+
+.transfrom-wrapper {
+  position: relative;
+  min-height: 100vh;
+  isolation: isolate;
+}
+
+.transform-BG {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  z-index: -1;
+
+  @media (max-width: 992px) {
+    object-fit: cover;
+  }
+}
+
+.transform-main {
+  h2 {
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 78px;
+    text-align: center;
+    color: #3cb816;
+    padding-top: 5rem;
+
+    @media (max-width: 1200px) {
+      font-size: 42px;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 30px;
+      line-height: 50px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 24px;
+      line-height: 35px;
+    }
+  }
+}
+
+.footer-reserved {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  text-align: right;
+  padding-bottom: 1rem;
+  color: #909090;
+}
+
+.transform-lead {
+  min-height: 95vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 15rem;
+
+  @media (max-width: 768px) {
+    gap: 0;
+  }
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: self-start;
+  gap: 10rem;
+  min-height: 200px;
+
+  @media (max-width: 992px) {
+    gap: 3rem;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+.footer-dpgu {
+  flex: 1;
+  div {
+    display: flex;
+
+    @media (max-width: 768px) {
+      justify-content: center;
+    }
+
+    img {
+      width: 45px;
+
+      @media (max-width: 1200px) {
+        width: 30px;
+      }
+
+      @media (max-width: 768px) {
+        width: 25px;
+        height: 25px;
+      }
+    }
+
+    h1 {
+      padding-left: 8px;
+      @media (max-width: 1200px) {
+        font-size: 26px;
+      }
+
+      @media (max-width: 768px) {
+        font-size: 20px;
+        font-weight: 200;
+      }
+    }
+  }
+
+  p {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #909090;
+
+    @media (max-width: 1200px) {
+      font-size: 16px;
+      line-height: 20px;
+    }
+  }
+}
+
+.footer-main {
+  flex: 1;
+  gap: 10px;
+  h2 {
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 39px;
+    border-bottom: 1px solid #ffffffe0;
+    padding-bottom: 10px;
+
+    @media (max-width: 1200px) {
+      font-size: 24px;
+      padding-bottom: 5px;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 18px;
+      padding-bottom: 0;
+    }
+  }
+
+  p {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #909090;
+
+    @media (max-width: 1200px) {
+      font-size: 16px;
+      padding-top: 5px;
+      line-height: normal;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 14px;
+      padding-top: 3px;
+    }
+  }
+}
+/* transform section ends here  */
