--- a/style.css
+++ b/style.css
@@ -536,7 +536,48 @@ body {
   }
 
   @media (max-width: 576px) {
-    min-height: 40vh;
+    min-height: 50vh;
+  }
+
+  h2 {
+    position: absolute;
+    color: white;
+    font-size: 144px;
+    font-weight: 400;
+    line-height: 28px;
+    color: #36383b;
+    margin-top: 5rem;
+    left: 50%;
+    transform: translateX(-50%);
+
+    @media (max-width: 992px) {
+      font-size: 110px;
+      margin-top: 0;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 90px;
+      margin-top: 5rem;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 45px;
+      margin-top: 0;
+    }
+  }
+}
+
+.rotated-image {
+  display: none;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  @media (max-width: 576px) {
+    display: block;
+    height: 300px;
+    width: 250px;
   }
 }
 
@@ -558,6 +599,10 @@ body {
 
   @media (max-width: 1450px) {
     width: 90%;
+  }
+
+  @media (max-width: 576px) {
+    display: none;
   }
 }
 
@@ -706,6 +751,7 @@ body {
     line-height: 39px;
     border-bottom: 1px solid #ffffffe0;
     padding-bottom: 10px;
+    margin-bottom: 10px;
 
     @media (max-width: 1200px) {
       font-size: 24px;
@@ -716,6 +762,34 @@ body {
       font-size: 18px;
       padding-bottom: 0;
     }
+  }
+
+  a:hover {
+    color: lightblue;
+  }
+
+  a {
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #909090;
+
+    @media (max-width: 1200px) {
+      font-size: 16px;
+      padding-top: 5px;
+      line-height: normal;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 14px;
+      padding-top: 3px;
+    }
+  }
+
+  p:hover {
+    color: lightblue;
+    cursor: pointer;
   }
 
   p {
