--- a/style.css
+++ b/style.css
@@ -683,7 +683,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: self-start;
-  gap: 10rem;
   min-height: 200px;
 
   @media (max-width: 992px) {
@@ -749,7 +748,6 @@ body {
 
 .footer-main {
   flex: 1;
-  gap: 10px;
   h2 {
     font-size: 32px;
     font-weight: 400;
@@ -782,22 +780,20 @@ body {
 
     @media (max-width: 1200px) {
       font-size: 16px;
-      padding-top: 5px;
       line-height: normal;
     }
 
     @media (max-width: 768px) {
       font-size: 14px;
-      padding-top: 3px;
     }
   }
 
-  p:hover {
+  a:hover {
     color: lightblue;
     cursor: pointer;
   }
 
-  p {
+  a {
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -805,13 +801,44 @@ body {
 
     @media (max-width: 1200px) {
       font-size: 16px;
-      padding-top: 5px;
       line-height: normal;
     }
 
     @media (max-width: 768px) {
       font-size: 14px;
-      padding-top: 3px;
+    }
+  }
+}
+
+.social-links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  a,
+  h2 {
+    width: 150px;
+    text-align: start;
+
+    @media (max-width: 768px) {
+      text-align: center;
+    }
+  }
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  a,
+  h2 {
+    width: 150px;
+    text-align: start;
+    margin: 0;
+
+    @media (max-width: 768px) {
+      text-align: center;
     }
   }
 }
