--- a/style.css
+++ b/style.css
@@ -635,6 +635,7 @@ body {
 
 .transform-main {
   h2 {
+    text-wrap: balance;
     font-size: 64px;
     font-weight: 400;
     line-height: 78px;
@@ -754,7 +755,6 @@ body {
     line-height: 39px;
     border-bottom: 1px solid #ffffffe0;
     padding-bottom: 10px;
-    margin-bottom: 10px;
 
     @media (max-width: 1200px) {
       font-size: 24px;
@@ -814,6 +814,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
 
   a,
   h2 {
@@ -830,6 +831,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
 
   a,
   h2 {
